# elgato-stream-deck-rs

./: Cargo.toml
src/: main.rs  pedal.rs  utils.rs
